--- a/_posts/2016-3-2-MP-3.md
+++ b/_posts/2016-3-2-MP-3.md
@@ -23,39 +23,38 @@ Goal: Create a single-page AngularJS app that lets users interact with the data 
 Your app should have the following features:
 
 1. A list view where users can input a search query and the app returns a list of movies that match the query. There should also be a way to sort the search results based on different properties of the results (such as the name or rank) and of specifying an ordering (ascending and descending). Also, the search bar should filter as you type.
-+ A gallery view that displays the movie posters for all the movies. There should be a way to select movies from different genres in the gallery.
-+ When an item in search view or the gallery view is clicked, the app should display the different attributes of the selected movie (from the JSON file). Also, this view should have previous and next buttons (can be implemented with arrows) that lets the user cycle through the list of movies. 
-+ You app should use animations wherever appropriate (at least once).-
-+ You should use partials
-+ You are free to use Foundation's components (such as the grid etc. ) for this part as long as it is used for styling and not used to implement the core functionality of the app.
+2. A gallery view that displays the movie posters for all the movies. There should be a way to select movies from different genres in the gallery.
+3. When an item in search view or the gallery view is clicked, the app should display the different attributes of the selected movie (from the JSON file). Also, this view should have previous and next buttons (can be implemented with arrows) that lets the user cycle through the list of movies. 
+4. You should use partials
+5. You are free to use Foundation's components (such as the grid etc. ) for this part as long as it is used for styling and not used to implement the core functionality of the app.
 We recommend you to use the following project structure:
 
 __Files__:
 
 1. The main HTML file for this app should be `public/index.html`, **but you should not need to touch this file**.
 The line of code `<div ng-view></div>` in the index.html inserts a partial into that div. It is up to you to set up the routing in your JS file.
-+ Your app has three main views (one for the list, one for the gallery and the other for displaying the details of a particuar movie). These should be implemented using three different [Angular routing and partial templates](https://docs.angularjs.org/tutorial/step_07). You can implement them in the three files in `public/partials`
-+ Your Angular code should go in `js/app.js` except for the controllers. The controllers should be in `js/controllers.js`. This keeps your code organized.
-+ For styling, you can use the scss files in `scss` folder like you did in MP 1 or write a css file or borrow css/scss from elsewhere (such as from Foundation). 
+2. Your app has three main views (one for the list, one for the gallery and the other for displaying the details of a particuar movie). These should be implemented using three different [Angular routing and partial templates](https://docs.angularjs.org/tutorial/step_07). You can implement them in the three files in `public/partials`
+3. Your Angular code should go in `js/app.js` except for the controllers. The controllers should be in `js/controllers.js`. This keeps your code organized.
+4, For styling, you can use the scss files in `scss` folder like you did in MP 1 or write a css file or borrow css/scss from elsewhere (such as from Foundation). 
 
 Also, here is a list of angular components that you might find useful:
-* [ngApp](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngApp)
-* [ngController](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)
-* [ngModel](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngModel)
-* [ngRepeat](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngRepeat)
-* [filter](https://code.angularjs.org/1.3.13/docs/api/ng/service/$filter)
-* [orderBy](https://code.angularjs.org/1.3.13/docs/api/ng/filter/orderBy)
-* [$http](https://code.angularjs.org/1.3.13/docs/api/ng/service/$http)
-* [ngSrc](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngSrc)
+1. [ngApp](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngApp)
+2. [ngController](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)
+3. [ngModel](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngModel)
+4. [ngRepeat](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngRepeat)
+5. [filter](https://code.angularjs.org/1.3.13/docs/api/ng/service/$filter)
+6. [orderBy](https://code.angularjs.org/1.3.13/docs/api/ng/filter/orderBy)
+7. [$http](https://code.angularjs.org/1.3.13/docs/api/ng/service/$http)
+8. [ngSrc](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngSrc)
 
 For the complete list, please refer to the [Angular documentation](https://docs.angularjs.org/api/ng). Make sure you're looking at the correct Angular version.
  
 <div class="section-heading"> Rules </div>
 1.    This is an individual assignment. No collaboration is permitted.
-+   It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
-+ If you think something you're doing might not be acceptable, please ask on Piazza.
-+ If you have additional assets (say pictures) you should put them under `public/data` folder and put everything there or in its subfolders (say `public/data/pics` and `public/data/videos`). There should be no other place in your folder structure where you are loading assets from. For example, do not create a `css/images` directory.
-+ You should not use absolute paths to load any of your asset files (say css, images or js) from your server. For example, there should not be anything like:
+2.   It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
+3. If you think something you're doing might not be acceptable, please ask on Piazza.
+4. If you have additional assets (say pictures) you should put them under `public/data` folder and put everything there or in its subfolders (say `public/data/pics` and `public/data/videos`). There should be no other place in your folder structure where you are loading assets from. For example, do not create a `css/images` directory.
+5. You should not use absolute paths to load any of your asset files (say css, images or js) from your server. For example, there should not be anything like:
 
 ```html
 src="/photos/skyline.jpg" 
